fix(ui): Auto-size `FileDropZone`
- Fixes overflowing on small screens & in small containers

--- a/packages/admin/src/styles/parts/fileInput.css
+++ b/packages/admin/src/styles/parts/fileInput.css
@@ -23,24 +23,9 @@
 	align-items: center;
 }
 
-:where(.fileInput-dropZone:last-child:nth-child(1)) {
-	grid-column: 1/-1;
-}
-
-:where(.fileInput-dropZone:last-child:nth-child(2)) {
-	grid-column: 2/-1;
-}
-
-:where(.fileInput-dropZone:last-child:nth-child(3)) {
-	grid-column: 3/-1;
-}
-
-:where(.fileInput-dropZone:last-child:nth-child(4)) {
-	grid-column: 4/-1;
-}
-
-:where(.fileInput-dropZone:last-child:nth-child(5)) {
-	grid-column: 5/-1;
+:where(.fileInput-dropZone) {
+	grid-column-start: var(--fileDropZone--grid-column-start, 1);
+	grid-column-end: var(--fileDropZone--grid-column-end, -1);
 }
 
 :where(.fileInput-cta) {
